# ds_genai_pdf_ingestor

./: .gitignore  README.md  pyproject.toml
notebook/: pdf_ingestor.ipynb
src/pdf_ingestor/ingest/: __init__.py  converter.py  loader.py  types.py  utils.py
src/pdf_ingestor/retrieval/: __init__.py  embeddings.py  vectordb.py
