[project]
name = "pdf-ingestor"
version = "0.1.0"
description = ""
authors = [
    {name = "Jose Guzman",email = "pepetavo@pm.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.70.0",
    "jupyterlab (>=4.5.3,<5.0.0)",
    "jupyterlab-lsp (>=5.2.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
catppuccin-jupyterlab = "^0.2.4"
